--- a/sonichq/games/index/advance/index.html
+++ b/sonichq/games/index/advance/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>Sonic HQ Gaming Info - Sonic's Schoolhouse</title>
+   <title>Sonic HQ Gaming Info - Sonic Advance</title>
 <script src=/sonichq/scripts/sonic-init.js></script>
 <style type="text/css">
 <!-- a:hover {text-decoration: underline}
@@ -28,7 +28,7 @@ MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
 </center>
 
 <p><span class=pathlinks><table class=glow>
-<a href=../../../>Sonic HQ</a> | <a href=../../>Gaming Info</a> | <a href=../>Game List</a> | Sonic's Schoolhouse - PC</table></span>
+<a href=../../../>Sonic HQ</a> | <a href=../../>Gaming Info</a> | <a href=../>Game List</a> | Sonic Advance - Gameboy Advance</table></span>
 
 <center>
 
@@ -109,19 +109,21 @@ Quick Info
 </table></div>
 
 <div class=itemtext>
-<LI><b><u>Title:</b></u> Sonic's Schoolhouse
-<LI><b><u>System Console:</b></u> PC
-<LI><b><u>Developer:</b></u> Orion Interactive
-<LI><b><u>US Release Date:</b></u> November, 1996 
-<LI><b><u>Genre:</b></u> Edutainment
-<LI><b><u>Characters:</b></u> Sonic The Hedgehog, Doctor Robotnik/Eggman
-<LI><b><u>First Appearances:</b></u> None
+<LI><b><u>Title:</b></u> Sonic The Hedgehog Advance
+<LI><b><u>System Console:</b></u> Nintendo Gameboy Advance
+<LI><b><u>Developer:</b></u> Sonic Team
+<LI><b><u>Japanese Release Date:</b></u> ???
+<LI><b><u>US Release Date:</b></u> ???
+<LI><b><u>European Release Date:</b></u> ???
+<LI><b><u>Genre:</b></u> 2D Platformer
+<LI><b><u>Characters:</b></u> Sonic The Hedgehog, Miles "Tails" Prower, Knuckles The Echidna, Amy Rose, Doctor Eggman / Robotnik, Possibly Others
+<LI><b><u>First Appearances:</b></u> Banking Paths
 <br><br></div><div class=titlebar><table class=glow>
 Other Pages
 </table></div>
 
 <div class=itemtext>
-<center>[<a href=info.shtml>Original Emuzone Page</a> | <a href=/sonichq/geocities/EnchantedForest/Dell/6657/SonicSchoolhouse.html>Geocities Page</a>]</center>
+<center>[<a href=/sonichq/images/display.cgi?directory=screenshots/sonicadvance&title=Sonic Advance>Screenshots</a>]</center>
 <br><br></div><!end of sections>
 
 </td>
@@ -130,8 +132,7 @@ Other Pages
 <td width=4>&nbsp;</td>
 <td valign=top bgcolor=000000 class=sidebar><font face=Arial size=-1 color=white><br>
 
-<center><img src=/sonichq/images/boxes/segapc/sonicschoolhouse-medium.gif
-alt="Sonic's Schoolhouse"></center>
+<center><img src=/sonichq/images/boxes/gbadvance/sonicadvance.jpg alt="Sonic Advance"></center>
 </font></td></tr>
 </table>
 <!end main table middle>
@@ -158,9 +159,9 @@ alt="Sonic's Schoolhouse"></center>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=70%><tr>
 <td VALIGN=TOP bgcolor=ffffff class=itemtable>
-<font face=Arial size=-1 color=black><div class=titlebar>Sonic's Schoolhouse</div>
+<font face=Arial size=-1 color=black><div class=titlebar>Intro</div>
 
-<div class=itemtext>Sega Entertainment, the PC company dedicated to bringing Sega characters to the PC in traditional gaming and edutainment titles, brought Sonic to the home school room in "Sonic Schoolhouse." Using rendered 3D realtime graphics in first-person perspective, kids ages 5-9 can learn to solve math and reading problems with their buddy Sonic. Set in a classroom-style environment, kids who successfully answer the problems earn recess and field trip time where they have the opportunity to unwind with "outside" activities and learn additional fun facts. Difficulty settings range from kindergarten to fourth-grade skill levels.<br><br></div></font></td></tr></table>
+<div class=itemtext>Sonic Advance marks the series' triumphant return to 2D platforming.  It is also very significantly the FIRST Sonic game on a Nintendo system.  Not much else is known about it except that Sonic, Tails, Knuckles, and Amy are playable, the character designs are in SA style, and 2 new tricks - banking paths and Sonic's "grind" move from SA2 - have been added.  Screenshots can be found on a link in the above table.<br><br></div></font></td></tr></table>
 
 <table border=0 cellspacing=0 cellpadding=0 width=70%><tr>
 <td><img SRC=/sonichq/bottomleft.gif BORDER=0 height=20></td>
