--- a/sonichq/games/index/fangames/TailsR.html
+++ b/sonichq/games/index/fangames/TailsR.html
@@ -5,9 +5,9 @@
 
 <STYLE><!--A{text-decoration:none;}--><!--A:hover {color: #405961; text-decoration:underline;}--></STYLE>
 
-<body background="/sonichq/images/swirly.gif" text=000066 link=405961 vlink=ff0000>
+<body background="/images/swirly.gif" text=000066 link=405961 vlink=ff0000>
 
-<b><font size=4><a href=https://web.archive.org/20011101000000/http://sonichq.cjb.net>Sonic HQ</a> / <a href=../../>Gaming Info</a> / <a href=../>The Games List</a> / Tails R</font></b>
+<b><font size=4><a href=https://web.archive.org/20011206000000/http://sonichq.cjb.net>Sonic HQ</a> / <a href=../../>Gaming Info</a> / <a href=../>The Games List</a> / Tails R</font></b>
 
 <hr>
 
@@ -20,7 +20,7 @@
 
 <p><font size=2 face="Comic Sans MS"><b>
 Other Sonic 2 GG Sections<br>
-<a href=https://web.archive.org/20011101000000/http://rivendell.fortunecity.com/masquerade/487/ target=whole>Author's Page</a> | <a href=/sonichq/images/games.html>Download</a>
+<a href=https://web.archive.org/20011206000000/http://rivendell.fortunecity.com/masquerade/487/ target=whole>Author's Page</a> | <a href=/sonichq/images/games.html>Download</a>
 
 <p>Author: LilSpriteX (Splut Software)<br>
 Rating: 4*
