--- a/sonichq/games/index/meanbean/index.html
+++ b/sonichq/games/index/meanbean/index.html
@@ -11,29 +11,21 @@ A{text-decoration:none} -->
 <link rel=stylesheet href=/sonichq/css/main.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
 
 <br>
 
 <center>
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
+<A HREF="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
-<!-- GOCLICK.COM POP-UNDER CODE V1 -->
-<script language="Javascript"> <!--
-var dd=document; dd.cookie='ct=1; path=/sonichq/';
-if ((dd.cookie.length > 0 && (dd.cookie.indexOf('ush=1') <= 0))) {
-dd.write('<scri'+'pt language="javascript" '+
-'src="https://web.archive.org/20011101000000/http://earth.goclick.com/pad2.mod?V=1&AID=6857&'+
-'SEARCH=web%20hosting"></scri'+'pt>');
-dd.cookie='push=1; path=/sonichq/'; }
-// --></script>
-<!-- END OF POP-UNDER CODE --></center>
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads.ad-flow.com/?DC=ztnet-pop1&JS=Y"></SCRIPT>
+</center>
 
 <p><span class=pathlinks><table class=glow>
 <a href=../../../>Sonic HQ</a> | <a href=../../>Gaming Info</a> | <a href=../>Game List</a> | Dr. Robotnik's Mean Bean Machine - Sega Genesis / Mega Drive, Game Gear, Master System</table></span>
@@ -147,9 +139,9 @@ Other Pages
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100%><tr>
-<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
-<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
@@ -171,7 +163,7 @@ Other Pages
 
 <div class=itemtext><center><br><img src=/sonichq/images/screenshots/meanbean/mbm1.jpg></center>
 <p>Welcome to the Mean Bean Machine. A puzzle game ala <i>Tetris</i>, Basically, this is just 
-<a href="https://web.archive.org/20011101000000/http://www.compile.co.jp" target=_blank>Compile's</a> <i>Puyo Puyo</i> puzzle game revised for the American audience. In fact: its pretty 
+<a href="https://web.archive.org/20011206000000/http://www.compile.co.jp" target=_blank>Compile's</a> <i>Puyo Puyo</i> puzzle game revised for the American audience. In fact: its pretty 
 much almost a direct port. If you've ever played <i>Kirby's Avalanche</i> (which came long after this) for the SNES, 
 this is the <b>EXACT</b> same game. :P Multi-colored "beans" fall from the top of the screen, <i>Tetris</i>-style. The object is to 
 align four beans of the same color and make them disappear. Here's where you come in: You can group the bean folk together 
