--- a/sonichq/games/index/r/index.html
+++ b/sonichq/games/index/r/index.html
@@ -11,19 +11,20 @@ A{text-decoration:none} -->
 <link rel=stylesheet href=/sonichq/css/main.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
 
 <br>
 
 <center>
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank" HEIGHT="60" WIDTH="468"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y"></A>
+<A HREF="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads.ad-flow.com/?DC=ztnet-pop1&JS=Y"></SCRIPT>
 </center>
 
 <p><span class=pathlinks><table class=glow>
@@ -139,9 +140,9 @@ Other Pages
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100%><tr>
-<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
-<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
@@ -293,42 +294,42 @@ Radiant Emerald Zone<BR><br><br></div></font></td></tr></table>
 <td VALIGN=TOP bgcolor=ffffff class=itemtable>
 <font face=Arial size=-1 color=black><div class=titlebar>Sonic The Hedgehog</div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/sonic.gif" alt="Sonic" align=left>
+<div class=itemtext><br><img src="/images/chars/sonicr/sonic.gif" alt="Sonic" align=left>
 Sonic is the fastest of all the racers. He’s so fast that he almost lifts off the ground when he runs. Because of this, his cornering is often not as good as other racers, be wary of high, sharp curves. Sonic also has excellent jumping ability too! Due to the fact that he goes SO FAST he can literally "jump on air" allowing him to often pass others that barr him going any further, or crossing obstacles that would normally give him a hard time. Sonic can also perform spin jumps as well! If you hold down and continually press A, C, or Y, Sonic will rev up a spin-dash - let go and off you go like a hyperkinetic cork! You can spin-dash right from the start of the race to get a head start on the opposition. Simply start the spin-dash before it says "Go", and release Down right when it says it to get ahead.<br><br></div><div class=titlebar>Tails the Fox</div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/Tails.jpg" alt="Tails" align=right>
+<div class=itemtext><br><img src="/images/chars/sonicr/Tails.jpg" alt="Tails" align=right>
 Tails is not as fast as Sonic, but he accelerates and corners well. Jump and grip are fairly good too, but best of all, he can fly! But one of his most surprising abilities is propelling himself underwater - a great way to get ahead of the rest of the racers! However, his speed will never allow him to beat Sonic or Knuckles in a straightaway...Like Sonic, Tails can jump in the air and spin-dash. He can also fly for a few seconds by jumping in the air, then pressing and holding A, C, or Y while up there. Tails can also spin-dash from the start of the race to get ahead.<br><br></div><div class=titlebar>Amy Rose</div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/amy1.gif" alt="Amy" align=left>
+<div class=itemtext><br><img src="/images/chars/sonicr/amy1.gif" alt="Amy" align=left>
 Maybe Amy’s car doesn’t have a very high top-speed, but there are some pretty wonderful things it can do. For one, it acts as a fast hovercraft on water. And look out when she fires the turbo boost! It can DEFINETELY get you into first place, but it can also make you lose control if not used well! But it will NOT work on water...Amy's hovercraft can automatically hover when you go on water. When a tire symbol appears in the top-right area of the screen, press A, C, or Y to fire your turbo boost and rocket ahead! Even though you can't turn too well while using the turbo boost, you can press L and R to help turn a little bit. Like Sonic, Tails, and Knuckles, Amy can jet forward in front of all the opposition at the start of the race. Simply hold A, C, or Y until the announcer says "Go" to boost ahead for a head start. Amy is best for exploring the course for secrets, not in a straight-out race. Use her to learn the tracks in a Time Trial race....<br><br></div><div class=titlebar>Knuckles The Echidna</div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/Knuckles.jpg" alt="Knux" align=right>
+<div class=itemtext><br><img src="/images/chars/sonicr/Knuckles.jpg" alt="Knux" align=right>
 Knuckles is the overall well-balanced contestant in the race. His ability to stay on the road is outstanding, and cornering is quite good. Knuckles can also glide after jumps, BUT he can NOT keep up with Sonic...Knuckles can jump and spin-dash just like Sonic and Tails. To glide - jump in the air, then press and hold A, C, or Y. Knuckles can spin-dash as well at the start to gain a lead.<br><br></div><div class=titlebar><b>Secret Racer #1:</b> Doctor Robotnik</div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/robo1.gif" alt="Eggman" align=left>
+<div class=itemtext><br><img src="/images/chars/sonicr/robo1.gif" alt="Eggman" align=left>
 <b>Unlocking The Secret Racer:</b> The key to unlocking Doc R as a racer is in the "Radiant Emerald Zone"! Just get a first place victory here and the Eggman will be in the fifth position on the character select screen next time you visit it!
 
 <p>Robotnik has returned in his faithful Egg-O-Matic to even up the odds!!! The machine cruises over water and is good for cornering, but no contact with the ground means no grip! But you know the dubious doc ALWYAS has tricks up his sleeve...namely the homing missiles! Like Amy, Robotnik can hover with his Egg-O-Matic. He also has homing missles you can use by pressing A, C, or Y whenever a green target appears over a racer in front of you. You must have 10 rings to use a missle. He's great fun in two-player matches when you feel like blasting people out of the water, but not good to use in races. Use him to learn the courses as well<br><br></div><div class=titlebar><b>Secret Racer #2:</b> Metal Sonic<BR></div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/msonic.jpg" alt="Metal Sonic" align=right>
+<div class=itemtext><br><img src="/images/chars/sonicr/msonic.jpg" alt="Metal Sonic" align=right>
 <b>Unlocking The Secret Racer:</b> The key to unlocking Metal Sonic as a racer is in the "Resort Island Zone"! Try using Sonic to get a first place victory here!
 
 <p>Metal Sonic has one edge that Sonic doesnt - the ability to hover. And this can make him faster in some areas while he is not faster than Sonic himself! However - along with his good, MS has his faults as well. For one thing Doc R screwed up again in the design - its true that he hovers, but if you stop moving he falls into the water like a moron. It's even more important to watch your speed on corners as his speed cant handle them well at all...<br><br></div><div class=titlebar><b>Secret Racer #3:</b> The Tails Doll</div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/mtails.jpg" alt="Tails Doll" align=left>
+<div class=itemtext><br><img src="/images/chars/sonicr/mtails.jpg" alt="Tails Doll" align=left>
 <b>Unlocking The Secret Racer:</b> The key to unlocking Teddy Tails as a racer is in the "Radical City Zone"! Just get a first place victory here and the Tails Doll will be on the character select screen next time you visit it!
 
 <p>Possibly one of the creepiest of ANY Sonic characters, the Tails Doll does not rejoice at the end of laps, it does not make any kind of gestures during a race....Complete with the stuffing down his back it just sits and stares like a blank zombie...His flight mode is absolutely perfect just as long as you dont slam into an object, such as a wall. He also hovers over water while standing still and will not fall in at all. He's a little bit slower than Tails and wobbly as well and cant take to flight immediately if jumping off of hills....<br><br></div><div class=titlebar><b>Secret Racer #4:</b> Metal Knuckles</div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/mknux.jpg" alt="Metal Knuckles" align=right>
+<div class=itemtext><br><img src="/images/chars/sonicr/mknux.jpg" alt="Metal Knuckles" align=right>
 <b>Unlocking The Secret Racer:</b> The key to unlocking Metal Knuckles as a racer is in the "Reactive Factory Zone"! Shortcuts are a MUST for a first place victory...
 
 <p>Metal Knuckles can be considered as a balanced racer with a few more faults than Knuckles....Along with good speeding, gliding, and hover capabilities, Metal Knux also posses Metal Sonics faults - not being able to corner well and falling into water like an idiot after hovering and not moving.<br><br></div><div class=titlebar><b>Secret Racer #5:</b> The Egg Robo</div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/erobo.jpg" alt="Egg Robo" align=left>
+<div class=itemtext><br><img src="/images/chars/sonicr/erobo.jpg" alt="Egg Robo" align=left>
 Eggbots are Robotniks "Chief badniks" of sorts. The largest badnik of them all Egg Robos can also race - however they are quite fat and clunky... Eggbots are strange, horrible racers...They posess SOME hover ability and missles like Doc R but thats about it - They're not even real good in competition mode. Point blank: They suck at racing...<br><br></div><div class=titlebar><b>Secret Racer #6:</b> Super Sonic</div>
 
-<div class=itemtext><br><img src="/sonichq/images/chars/sonicr/ssonic.jpg" alt="Super Sonic !!!" align=right>
+<div class=itemtext><br><img src="/images/chars/sonicr/ssonic.jpg" alt="Super Sonic !!!" align=right>
 <b>Unlocking The Secret Racer:</b> The final of the secret racers - the key to unlocking Super Sonic as a racer lies in EVERY ZONE - Find the Chaos Emeralds in all of them... 
 
 <p>He's baaaaacccckkk.....The ULTIMATE SONIC is back and rarin' for action! And he works just a little bit better than your regular everyday average Sonic The Hedgehog...Being that Super Sonic is super fast, it's even more important to watch your speed on the corners. Take Super Sonic across water and through shortcuts for easy victories. Beware, the computer uses this trick all the time as well is you race against SS. For your help, here are the locations of all the Chaos Emeralds...<br><br></div></font></td></tr></table>
