--- a/sonichq/games/index/s1/index.html
+++ b/sonichq/games/index/s1/index.html
@@ -11,19 +11,20 @@ A{text-decoration:none} -->
 <link rel=stylesheet href=/sonichq/css/main.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
 
 <br>
 
 <center>
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank" HEIGHT="60" WIDTH="468"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y"></A>
+<A HREF="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads.ad-flow.com/?DC=ztnet-pop1&JS=Y"></SCRIPT>
 </center>
 
 <p><span class=pathlinks><table class=glow>
@@ -124,7 +125,7 @@ Other Pages
 
 <div class=itemtext>
 <table align=right border=0><td><embed src="/sonichq/geocities/EnchantedForest/Dell/6657/son1gren.mid" height=25 width=50 autostart="true" loop="true" controls=smallconsole></td><td width=5>&nbsp;</td></table>
-<center>[<a href=/sonichq/music/display.cgi?category=genesis&title=sonic1>Music</a> | <a href="/sonichq/display.cgi?directory=screenshots/sonic&title=Sonic 1">Screenshots</a> | <a href=info.shtml>Original Emuzone Page</a> | <a href=/sonichq/geocities/EnchantedForest/Dell/6657/Sonic1.html>Geocities Page</a>]</center>
+<center>[<a href=/sonichq/music/display.cgi?category=genesis&title=sonic1>Music</a> | <a href="/display.cgi?directory=screenshots/sonic&title=Sonic 1">Screenshots</a> | <a href=info.shtml>Original Emuzone Page</a> | <a href=/sonichq/geocities/EnchantedForest/Dell/6657/Sonic1.html>Geocities Page</a>]</center>
 <br><br></div><!end of sections>
 
 </td>
@@ -141,9 +142,9 @@ alt="Sonic 1"></center>
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100%><tr>
-<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
-<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
@@ -170,7 +171,7 @@ Sonic 1 had 7 levels consisting of the Green Hill, Marble, Sring Yard, Labyrinth
 
 <p>Meet Sonic The Hedgehog as he strives to free the planet of Mobius from the tyranical reign of Doctor Ivo Robotnik! As Dr. Robotnik makes his first move against planet Mobius, unleashing his technology on innocent animals and turning them into evil robots a new hero steps up into the spotlight - a blue super quick hedgehog named Sonic - And a legend is born! Only this super-cool hedgehog can save his friends and Mobius, then show Robotnik who's boss. Spin through space, loop 'til you're dizzy, and save the animals to become the super hero.<br><br></div><div class=titlebar>Comic Adaption</div>
 
-<div class=itemtext><center><a href=/sonichq/comics/archive/firstsonic.html><img src=https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/da-sonic/small/cover.jpg></a></center>
+<div class=itemtext><center><a href=/sonichq/comics/archive/firstsonic.html><img src=https://web.archive.org/20011206000000/http://members.spree.com/funNgames/asudem/comix/da-sonic/small/cover.jpg></a></center>
 
 <p>Ever hear of the magazine Disney Adventures? If so then you may be in for a quaint little 
 surprise....Before there was Archie and Egmont Fleetway, or any of the cartoons, produced was the first TRUE Sonic comic, 
