--- a/sonichq/games/index/spinball/index.html
+++ b/sonichq/games/index/spinball/index.html
@@ -11,19 +11,20 @@ A{text-decoration:none} -->
 <link rel=stylesheet href=/sonichq/css/main.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
 
 <br>
 
 <center>
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank" HEIGHT="60" WIDTH="468"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y"></A>
+<A HREF="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads.ad-flow.com/?DC=ztnet-pop1&JS=Y"></SCRIPT>
 </center>
 
 <p><span class=pathlinks><table class=glow>
@@ -140,9 +141,9 @@ alt="Sonic Spinball"></center>
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100%><tr>
-<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
-<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
@@ -171,8 +172,8 @@ alt="Sonic Spinball"></center>
 <div class=itemtext><center><br><img src=/sonichq/images/screenshots/spinball/sstoxic1.gif></center>
 <p>If you've played Sonic 2's Casino Night Zone, then you know what this is like. As hard as this game is, it can be beaten WITHOUT a game genie. However unless you don't want to see the outside world for quite a while I suggest you get very ready to handle this game! The object is to get the Chaos Emeralds that Robotnik is using to power up is fortress. There are 3 in the first two stages and 5 in the rest.<br><br></div><div class=titlebar>Comic Adaption</div>
 
-<div class=itemtext><center><br><A HREF="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/big/sonic6.jpg">
-<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic6.jpg" 
+<div class=itemtext><center><br><A HREF="https://web.archive.org/20011206000000/http://members.spree.com/funNgames/asudem/comix/sonic/big/sonic6.jpg">
+<IMG SRC="https://web.archive.org/20011206000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic6.jpg" 
 alt="Sonic The Hedgehog #6"></A></center>
 <p><b>Title:</b> Sonic The Hedgehog # 6 - "The Spin Doctor"<BR>
 <BR><b>Writer: Mike Gallagher</b>
