--- a/sonichq/images/display.cgi%3fdirectory%3dscreenshots/sonicadvance%26title%3dSonic/index.html
+++ b/sonichq/images/display.cgi%3fdirectory%3dscreenshots/sonicadvance%26title%3dSonic/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>Sonic HQ - Download Gallery - Tails And The Music Maker</title>
+   <title>Sonic HQ - Download Gallery - Sonic</title>
 <script src=/sonichq/scripts/megaman-init.js></script>
 <style type="text/css">
 <!-- a:hover {text-decoration: underline}
@@ -14,7 +14,7 @@ A{text-decoration:none} -->
 <body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/images/backgrounds/EspioGrayBG.gif" bgproperties="fixed">
 
 <span class=pathlinks><table class=glow>
-<a href=/sonichq/>Sonic HQ</a> | <a href=/sonichq/images>Download Gallery</a> | Tails And The Music Maker
+<a href=/sonichq/>Sonic HQ</a> | <a href=/sonichq/images>Download Gallery</a> | Sonic
 </table></span>
 
 <center><p><table width=70%><tr align=center><td>
@@ -23,7 +23,7 @@ A{text-decoration:none} -->
 <tr><td width=19><img src=../../../topleft.gif width=19></td>
 
 <td bgcolor=black width=100%><center><b><font size=4 color=4B1FFC face=Verdana>
-Tails And The Music Maker
+Sonic
 </font></b></center></td>
 
 <td width=19><img src=../../../topright.gif width=19></td></tr>
@@ -41,9 +41,14 @@ Tails And The Music Maker
 <table border=1 bordercolor="404FE0" width="100%" cellspacing=0 bgcolor="ffffff">
 
 <tr align=center>
-<td><a href=screenshots/tailsmusicmaker/pitailmusscr1.gif><img src=screenshots/tailsmusicmaker/thumbnails/pitailmusscr1.gif border=0></a></td>
-<td><a href=screenshots/tailsmusicmaker/pitailmusscr2.gif><img src=screenshots/tailsmusicmaker/thumbnails/pitailmusscr2.gif border=0></a></td>
-<td><a href=screenshots/tailsmusicmaker/pitailmusscr3.gif><img src=screenshots/tailsmusicmaker/thumbnails/pitailmusscr3.gif border=0></a></td>
+<td><a href=screenshots/sonicadvance/1_1bank.jpg><img src=screenshots/sonicadvance/thumbnails/1_1bank.jpg border=0></a></td>
+<td><a href=screenshots/sonicadvance/1_1slope.jpg><img src=screenshots/sonicadvance/thumbnails/1_1slope.jpg border=0></a></td>
+<td><a href=screenshots/sonicadvance/1_2grind.jpg><img src=screenshots/sonicadvance/thumbnails/1_2grind.jpg border=0></a></td>
+<td><a href=screenshots/sonicadvance/1_2loop.jpg><img src=screenshots/sonicadvance/thumbnails/1_2loop.jpg border=0></a></td>
+</tr>
+<tr align=center>
+<td><a href=screenshots/sonicadvance/6_1rock1.jpg><img src=screenshots/sonicadvance/thumbnails/6_1rock1.jpg border=0></a></td>
+<td><a href=screenshots/sonicadvance/6_1rocke.jpg><img src=screenshots/sonicadvance/thumbnails/6_1rocke.jpg border=0></a></td>
 
 
 </table>
