--- a/sonichq/images/display.cgi%3fdirectory%3dscreenshots/sonicadventure2%26title%3dSonic/index.html
+++ b/sonichq/images/display.cgi%3fdirectory%3dscreenshots/sonicadventure2%26title%3dSonic/index.html
@@ -11,10 +11,10 @@ A{text-decoration:none} -->
 <link rel=stylesheet href=/sonichq/css/.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/sonichq/images/backgrounds/EspioGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/images/backgrounds/EspioGrayBG.gif" bgproperties="fixed">
 
 <span class=pathlinks><table class=glow>
-<a href=/>Sonic HQ</a> | <a href=/sonichq/images>Download Gallery</a> | Sonic
+<a href=/sonichq/>Sonic HQ</a> | <a href=/sonichq/images>Download Gallery</a> | Sonic
 </table></span>
 
 <center><p><table width=70%><tr align=center><td>
