--- a/sonichq/games/index/arcade/index.html
+++ b/sonichq/games/index/arcade/index.html
@@ -11,29 +11,21 @@ A{text-decoration:none} -->
 <link rel=stylesheet href=/sonichq/css/main.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
 
 <br>
 
 <center>
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
+<A HREF="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
-<!-- GOCLICK.COM POP-UNDER CODE V1 -->
-<script language="Javascript"> <!--
-var dd=document; dd.cookie='ct=1; path=/sonichq/';
-if ((dd.cookie.length > 0 && (dd.cookie.indexOf('ush=1') <= 0))) {
-dd.write('<scri'+'pt language="javascript" '+
-'src="https://web.archive.org/20011101000000/http://earth.goclick.com/pad2.mod?V=1&AID=6857&'+
-'SEARCH=web%20hosting"></scri'+'pt>');
-dd.cookie='push=1; path=/sonichq/'; }
-// --></script>
-<!-- END OF POP-UNDER CODE --></center>
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads.ad-flow.com/?DC=ztnet-pop1&JS=Y"></SCRIPT>
+</center>
 
 <p><span class=pathlinks><table class=glow>
 <a href=../../../>Sonic HQ</a> | <a href=../../>Gaming Info</a> | <a href=../>Game List</a> | SegaSonic Arcade - Arcade</table></span>
@@ -131,7 +123,7 @@ Other Pages
 
 <div class=itemtext>
 <table align=right border=0><td><embed src="/sonichq/geocities/EnchantedForest/Dell/7835/ESAMetropolistrancezone.mid" height=25 width=50 autostart="true" loop="true"></td><td width=5>&nbsp;</td></table>
-<a href=../../../music/display.cgi?category=arcade&title=segasonic>Music</a> | <a href=../../../music/display.cgi?category=arcade&title=segasonic>Sonic Arcade Music CD Music (Unrelated, But Mistaken For The SegaSonic Soundtrack By Fans)</a> | <a href="/sonichq/images/display.cgi?directory=screenshots/segasonicarcade&title=SegaSonic Arcade">Music</a> | <a href=info.shtml>Original Emuzone Page</a> | <a href=/sonichq/geocities/EnchantedForest/Dell/6657/SonicArcade.html>Geocities Page</a>
+<a href=../../../music/display.cgi?category=arcade&title=segasonic>Music</a> | <a href=../../../music/display.cgi?category=arcade&title=segasonic>Sonic Arcade Music CD Music (Unrelated, But Mistaken For The SegaSonic Soundtrack By Fans)</a> | <a href="/images/display.cgi?directory=screenshots/segasonicarcade&title=SegaSonic Arcade">Music</a> | <a href=info.shtml>Original Emuzone Page</a> | <a href=/sonichq/geocities/EnchantedForest/Dell/6657/SonicArcade.html>Geocities Page</a>
 <br><br></div><!end of sections>
 
 </td>
@@ -148,9 +140,9 @@ alt="SegaSonic Arcade"></center>
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100%><tr>
-<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
-<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
@@ -172,25 +164,25 @@ alt="SegaSonic Arcade"></center>
 
 <div class=itemtext>What do I know? For one, it's "SegaSonic Arcade", not Sonic Arcade. Consisting of what looked to be traditional Sonic gameplay, you play as Sonic The Hedgehog, or two of the newer characters Ray The Squirrel, or Mighty The Armadillo - Who would soon go on to be come one of the founding members of The Chaotix in Knuckles Chaotix! Sadly this game NEVER came out in the US, released only in Japanese Arcades...From what EXTREMELY little I know, It was designed to be a "track ball game" whatever that is. You can control Sonic and two more characters to use the track ball in your quest to stop Robotnik. And from the looks of things it was designed to be an adventure game, MAYBE working around the same way as the old Ninja Turtles Arcade Game may have (THIS IS ONLY A GUESS JUST BY LOOKING AT PICTURES). But without actually playing it or knowing anyone who has its hard to tell....From what a japanese Sega fan informed us, the track ball game was designed in an isometric view with true 3-D
 graphics composed up of flat shaded (yet, surprisingly good looking) polygons - very similar to <i>Sonic 3D Blast</i>'s isometic view, only much more detailed, and <i>Streets of Rage-style</i> and <i>Final Fight</i> type brawling. But it only had ONE AMERICAN SHOWING EVER !!!! It won critical acclaim at one of the Consumer Electronic Show in Las Vegas, but it never was released nationally in arcades. That's just too bad because from the looks of it, the Saturn could probably handle such a game due to its simple
-yet attractive look. With it having an EXTREMELY limited release this makes it the RAREST Sonic game ever...Maybe it could come out in a "Jam" title for Dreamcast. But I seriously doubt it. Who knows, anything can happen?<p>In the meantime, thanks to sonic fan <a href="mailto:katharin@ellensburg.com">Micheal Stearns</a>, owner of <a href="https://web.archive.org/20011101000000/http://larry.ellensburg.com/~katharin/conspiracy/sonic.html">Sonic The Conspiracy</a> we now have new information on the game that NOBODY seemed to know about! While details aree still foggy we will do our best to keep you informed. For some mysterious reason, nobody from Japan has given us American Sonic fans any words on the game. The game has turned up in London, but even there still in its Japanese form. If anybody else wants to share any details, please let us at Sonic HQ as well as <a href="mailto:katharin@ellensburg.com">Micheal</a> know.
+yet attractive look. With it having an EXTREMELY limited release this makes it the RAREST Sonic game ever...Maybe it could come out in a "Jam" title for Dreamcast. But I seriously doubt it. Who knows, anything can happen?<p>In the meantime, thanks to sonic fan <a href="mailto:katharin@ellensburg.com">Micheal Stearns</a>, owner of <a href="https://web.archive.org/20011206000000/http://larry.ellensburg.com/~katharin/conspiracy/sonic.html">Sonic The Conspiracy</a> we now have new information on the game that NOBODY seemed to know about! While details aree still foggy we will do our best to keep you informed. For some mysterious reason, nobody from Japan has given us American Sonic fans any words on the game. The game has turned up in London, but even there still in its Japanese form. If anybody else wants to share any details, please let us at Sonic HQ as well as <a href="mailto:katharin@ellensburg.com">Micheal</a> know.
 
 <p>The lone ad graphic right up there and the low-quality screenshots below from an old <i>Electronic Gaming Monthly</i> are the only proof of this game's existence that Americans know of. It's odd that this game wasn't more widely distributed having been released right on the heels of Sonic the Hedgehog 2 and the beginning of Sonic mania explosion that hit the US, Japan, and Europe simultaneosly... 
 <p>Supposedly, up to three people could play at once (as Sonic the Hedgehog, Mighty the Armadillo, or Ray the Flying Squirrel), and characters probably each had thier own special moves that they could use . There was, at one time, a rumored Sega 32X version of the game planned. However, this never came to fruition, whether because of the system's untimely demise or simply because no such plans ever existed in the first place. <br><br></div><div class=titlebar>Screenshots</div>
 
-<div class=itemtext><IMG SRC="/sonichq/images/screenshots/segasonicarcade/screenshot1.jpg"><IMG SRC="/sonichq/images/screenshots/segasonicarcade/screenshot2.jpg"><IMG SRC="/sonichq/images/screenshots/segasonicarcade/screenshot3.jpg">
+<div class=itemtext><IMG SRC="/images/screenshots/segasonicarcade/screenshot1.jpg"><IMG SRC="/images/screenshots/segasonicarcade/screenshot2.jpg"><IMG SRC="/images/screenshots/segasonicarcade/screenshot3.jpg">
 
 <p>
 
-<IMG SRC="/sonichq/images/screenshots/segasonicarcade/screenshot5.jpg"><IMG SRC="/sonichq/images/screenshots/segasonicarcade/screenshot6.jpg"><IMG SRC="/sonichq/images/screenshots/segasonicarcade/screenshot7.jpg">
+<IMG SRC="/images/screenshots/segasonicarcade/screenshot5.jpg"><IMG SRC="/images/screenshots/segasonicarcade/screenshot6.jpg"><IMG SRC="/images/screenshots/segasonicarcade/screenshot7.jpg">
 
 <p>Actual zones in the game include Desert Dodge Zone and Volcanic Vault Zone. Another popular level name to associate with Sonic Arcade is Metropolis Trance Zone, but that has never been confirmed. The songs "Sonic and Tails," "King of the Ring," "Sonic Electronic," and "They Call Me Sonic." They are from a totally unrelated original CD published by a company called "Arcade"--hence all the previous confusion.
 
 <p>This above ad scan comes to us from <i>Die Hard Game Fan Magazine, Oct. 1993</i>, taken from the Tokyo Game Show. Sadly, GameFan didn't give any text to go with the pictures, which is a shame considering how much higher quality they are than EGM's pics - the newer ones that have surfaced as of recent. It does show the ONLY pic of all three characters in action though. Another cool GameFan shot (Mike didn't have the issue) shows the Ice cave level with all the characters slipping around and huge icicles shattering on the floor.
-<p><IMG SRC="/sonichq/images/screenshots/segasonicarcade/screenshot4.jpg">
+<p><IMG SRC="/images/screenshots/segasonicarcade/screenshot4.jpg">
 
 <p>Basically the above information is the ONLY known facts on Sonic Arcade that exist - however if you wish to read the actual EGM article that describes and rates the game, Micheal took the time out to type and post it on his page. And rather than copy and paste here I decided to link it so that the rest of you Sonic fans can take a look at the article describing the LOST Sonic game...
 
-<p><a href="https://web.archive.org/20011101000000/http://larry.ellensburg.com/~katharin/conspiracy/arc2.htm">Leading Edge: Sonic The Hedgehog Arcade</a><br><br></div></font></td></tr></table>
+<p><a href="https://web.archive.org/20011206000000/http://larry.ellensburg.com/~katharin/conspiracy/arc2.htm">Leading Edge: Sonic The Hedgehog Arcade</a><br><br></div></font></td></tr></table>
 
 <table border=0 cellspacing=0 cellpadding=0 width=70%><tr>
 <td><img SRC=/sonichq/bottomleft.gif BORDER=0 height=20></td>
