--- a/sonichq/games/index/skypatrol/index.html
+++ b/sonichq/games/index/skypatrol/index.html
@@ -11,29 +11,21 @@ A{text-decoration:none} -->
 <link rel=stylesheet href=/sonichq/css/main.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
 
 <br>
 
 <center>
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
+<A HREF="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011206000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
-<!-- GOCLICK.COM POP-UNDER CODE V1 -->
-<script language="Javascript"> <!--
-var dd=document; dd.cookie='ct=1; path=/sonichq/';
-if ((dd.cookie.length > 0 && (dd.cookie.indexOf('ush=1') <= 0))) {
-dd.write('<scri'+'pt language="javascript" '+
-'src="https://web.archive.org/20011101000000/http://earth.goclick.com/pad2.mod?V=1&AID=6857&'+
-'SEARCH=web%20hosting"></scri'+'pt>');
-dd.cookie='push=1; path=/sonichq/'; }
-// --></script>
-<!-- END OF POP-UNDER CODE --></center>
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011206000000/http://ads.ad-flow.com/?DC=ztnet-pop1&JS=Y"></SCRIPT>
+</center>
 
 <p><span class=pathlinks><table class=glow>
 <a href=/sonichq/>Sonic HQ</a> | <a href=/sonichq/games/>Gaming Info</a> | <a href=/sonichq/games/index/>Game List</a> | Tails' SkyPatrol - Game Gear</table></span>
@@ -148,9 +140,9 @@ alt="Tails SkyPatrol"></center>
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100%><tr>
-<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
-<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
@@ -172,7 +164,7 @@ alt="Tails SkyPatrol"></center>
 
 <div class=itemtext>There was next to NO INFORMATION on this game...Thanks to Sonic fan Green Gibbon we were able to get some more information - The only time Sonic fans had ever heard anything about was is in Sonic Jam, and the screenshots show Tails that can carry rings in his hand while flying. All I know about this game is that it was only released in Japan for the Game Gear. Judging from the screenshots I've seen (in Sonic Jam), it looks very similar to Tails Adventure, only a tad more puzzle-based (which would, essentially, make it a skill game and not a platformer at all). The screens had Tails flying around in what appeared to look like Emerald Hill Zone (from Sonic 2 on Genesis). He was lugging around a Ring, and there were some Mario-ish blocks floating around in the air.<br><br></div><div class=titlebar>Got More Info?</div>
 
-<div class=itemtext>If you can help Sonic HQ get any more info and/or screenshots for this game, please post on HQ's <a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/bsonichqcommunity>forum</a>.<br><br></div></font></td></tr></table>
+<div class=itemtext>If you can help Sonic HQ get any more info and/or screenshots for this game, please post on HQ's <a href=https://web.archive.org/20011206000000/http://pub12.ezboard.com/bsonichqcommunity>forum</a>.<br><br></div></font></td></tr></table>
 
 <table border=0 cellspacing=0 cellpadding=0 width=70%><tr>
 <td><img SRC=/sonichq/bottomleft.gif BORDER=0 height=20></td>
